--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "react/prop-types": "off"
     }
 }
